@@ -1,27 +1,15 @@
 package com.dbs.mot.grc.service;
 
 import com.dbs.mot.grc.common.exception.ConflictException;
-import com.dbs.mot.grc.common.exception.NotFoundException;
 import com.dbs.mot.grc.dto.AssmtGenerationResponse;
-import com.dbs.mot.grc.dto.DerivedDetailColumns;
-import com.dbs.mot.grc.dto.DimensionKey;
-import com.dbs.mot.grc.dto.MatchedFactRows;
-import com.dbs.mot.grc.entity.InaFactOrl;
-import com.dbs.mot.grc.entity.IncFactOrl;
-import com.dbs.mot.grc.entity.KriFactOrl;
 import com.dbs.mot.grc.entity.OrlBizUnit;
 import com.dbs.mot.grc.entity.OrlLndscpAssmt;
 import com.dbs.mot.grc.entity.OrlLndscpAssmtDetails;
 import com.dbs.mot.grc.entity.OrlLndscpDim;
-import com.dbs.mot.grc.entity.RcsaFactOrl;
-import com.dbs.mot.grc.repository.InaFactOrlRepository;
-import com.dbs.mot.grc.repository.IncFactOrlRepository;
-import com.dbs.mot.grc.repository.KriFactOrlRepository;
 import com.dbs.mot.grc.repository.OrlBizUnitRepository;
 import com.dbs.mot.grc.repository.OrlLndscpAssmtRepository;
-import com.dbs.mot.grc.repository.OrlLndscpDimRepository;
-import com.dbs.mot.grc.repository.RcsaFactOrlRepository;
 import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
@@ -43,18 +31,13 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
- * Generates a landscape assessment and all of its detail rows for a given landscape.
+ * Generates a landscape assessment and all of its detail rows for a given landscape config.
  *
  * <h3>Flow</h3>
  * <ol>
- *   <li>Resolve the landscape config by name: only rows that are {@code ACTIVE} and whose
- *       {@code EFFECT_START_DT}..{@code EFFECT_END_DT} window contains today qualify —
- *       404 when none qualify, 409 when more than one does (ambiguous config).</li>
  *   <li>Reject if an assessment already exists for this landscape + current month — 409.</li>
  *   <li>Expand the config into detail-row specs: {@code RISK_AREA} keys × business units ×
  *       locations, producing {@code L{lvl}}, {@code grp_l{lvl}} and {@code loc} category rows.</li>
@@ -62,14 +45,17 @@ import java.util.stream.Collectors;
  *   <li>Link the new assessment to the previous month's assessment (same
  *       {@code LNDSCP_NUM}, period = current month − 1) via {@code PREV_ASSMT_NUM};
  *       {@code null} when this is the config's first assessment.</li>
- *   <li>Match each row to the module fact rows (by dimension key, for today's {@code biz_dt})
- *       and derive {@code GRC_METRICS}, {@code CAL_NET_RISK_RTNG}, etc. via
- *       {@link FactDerivationService}.</li>
- *   <li>Persist the assessment aggregate (root + all detail children) in one transaction.</li>
+ *   <li>Persist the assessment aggregate (root + all thin detail children) in one
+ *       transaction.</li>
  * </ol>
  *
- * <p>All derivation lives here / in {@link FactDerivationService}; the repositories run
- * only plain, single-table queries with no transformations.
+ * <p>Detail rows are <b>thin</b>: only dimensions, category, status and audit columns are
+ * written. The computed values (calculated NRR, commentary, GRC metrics, etc.) are not
+ * stored here — they live in {@code fact_orl} and are matched at read time by the
+ * assessment read APIs.
+ *
+ * <p>The single entry point is {@link #generateForDim(OrlLndscpDim, String)}; the config
+ * to generate from is resolved by the caller ({@link BulkAssmtGenerationService}).
  */
 @Slf4j
 @Service
@@ -85,70 +71,17 @@ public class LandscapeAssmtGenerationService {
     private static final ObjectMapper MAPPER = new ObjectMapper()
             .enable(JsonParser.Feature.STRICT_DUPLICATE_DETECTION);
 
-    private final OrlLndscpDimRepository dimRepository;
     private final OrlLndscpAssmtRepository assmtRepository;
     private final OrlBizUnitRepository bizUnitRepository;
-    private final IncFactOrlRepository incFactRepository;
-    private final InaFactOrlRepository inaFactRepository;
-    private final KriFactOrlRepository kriFactRepository;
-    private final RcsaFactOrlRepository rcsaFactRepository;
-    private final FactDerivationService factDerivationService;
 
     /**
-     * Generates the assessment for the landscape with the given name.
+     * Generates the assessment for an already-resolved config row. Called per landscape by
+     * the bulk generation service — which relies on this method's own transaction so one
+     * landscape's failure cannot roll back the others.
      *
-     * <p>The config row is resolved from {@code orl_lndscp_dim}: only rows with
-     * {@code STATUS = 'ACTIVE'} whose effective window contains today qualify.
-     *
-     * @param lndscpNm landscape name ({@code orl_lndscp_dim.LNDSCP_NM}), from the path
-     * @param userId   caller identity, stored as {@code CREATED_BY}
+     * @param dim    the landscape config to generate from
+     * @param userId caller identity, stored as {@code CREATED_BY}
      * @return a summary of the generated assessment
-     * @throws NotFoundException if no active config is effective today for {@code lndscpNm}
-     * @throws ConflictException if more than one active config is effective today
-     *                           (ambiguous), or an assessment already exists for this
-     *                           landscape + current month
-     */
-    @Transactional
-    public AssmtGenerationResponse generateByName(String lndscpNm, String userId) {
-        log.debug("Generating assessment for landscape '{}' by '{}'", lndscpNm, userId);
-        OrlLndscpDim dim = resolveEffectiveConfig(lndscpNm);
-        return generateForDim(dim, userId);
-    }
-
-    /**
-     * Resolves the single ACTIVE, currently-effective config row for the given landscape
-     * name. All filtering happens here in the service layer — the repository query is a
-     * plain single-table lookup by name.
-     */
-    private OrlLndscpDim resolveEffectiveConfig(String lndscpNm) {
-        LocalDate today = LocalDate.now();
-        List<OrlLndscpDim> effective = dimRepository.findByLndscpNm(lndscpNm).stream()
-                .filter(dim -> dim.isActiveAndEffectiveOn(today))
-                .toList();
-
-        if (effective.isEmpty()) {
-            throw new NotFoundException(
-                    "No active landscape config effective today for '" + lndscpNm + "'.");
-        }
-        if (effective.size() > 1) {
-            String ids = effective.stream()
-                    .map(dim -> String.valueOf(dim.getId()))
-                    .collect(Collectors.joining(", "));
-            throw new ConflictException("Multiple active configs (ids: " + ids
-                    + ") are effective today for landscape '" + lndscpNm
-                    + "' — cannot determine which one to generate from.");
-        }
-        log.debug("Resolved landscape '{}' to config id={} (version={})",
-                lndscpNm, effective.get(0).getId(), effective.get(0).getVersion());
-        return effective.get(0);
-    }
-
-    /**
-     * Generates the assessment for an already-resolved config row. Called directly by
-     * {@link #generateByName} and, per landscape, by the bulk generation service — which
-     * relies on this method's own transaction so one landscape's failure cannot roll
-     * back the others.
-     *
      * @throws ConflictException if an assessment already exists for this landscape + month
      */
     @Transactional
@@ -181,13 +114,12 @@ public class LandscapeAssmtGenerationService {
                 assmtRepository.findIdByLndscpNumAndPeriod(lndscpNum, previousPeriod);
         log.debug("Previous assessment for lndscpNum={} period='{}': {}",
                 lndscpNum, previousPeriod, prevAssmtId.map(String::valueOf).orElse("none"));
-        FactIndex facts = loadFacts(today);
 
-        // ── Build the detail rows ────────────────────────────────────────────────
+        // ── Build the (thin) detail rows ─────────────────────────────────────────
         LocalDateTime now = LocalDateTime.now();
         List<OrlLndscpAssmtDetails> details = new ArrayList<>();
         for (RowSpec spec : expand(riskAreas, bizUnits, locations, lvl)) {
-            details.add(buildDetail(spec, lvl, buByName, facts, userId, now));
+            details.add(buildDetail(spec, lvl, buByName, userId, now));
         }
         log.debug("Expanded {} detail row(s) for lndscpNum={}", details.size(), lndscpNum);
 
@@ -251,7 +183,7 @@ public class LandscapeAssmtGenerationService {
 
     private OrlLndscpAssmtDetails buildDetail(RowSpec spec, Integer lvl,
                                               Map<String, OrlBizUnit> buByName,
-                                              FactIndex facts, String userId, LocalDateTime now) {
+                                              String userId, LocalDateTime now) {
         // Resolve the BU hierarchy columns (null for 'loc' rows which carry no BU).
         String l2 = null;
         String l3 = null;
@@ -273,25 +205,25 @@ public class LandscapeAssmtGenerationService {
             }
         }
 
-        DimensionKey key = new DimensionKey(spec.riskArea(), l2, l3, l4, spec.location(), spec.category());
-
-        DerivedDetailColumns derived = factDerivationService.derive(facts.match(key));
-
+        // Thin row — computed values are matched from fact_orl at read time.
+        // Empty dimension columns are stored as '' (never null) so the unique index
+        // on (assessment, risk area, BU path, location) actually enforces uniqueness.
         return OrlLndscpAssmtDetails.builder()
                 .riskArea(spec.riskArea())
-                .orlBuNmL2(l2)
-                .orlBuNmL3(l3)
-                .orlBuNmL4(l4)
-                .location(spec.location())
+                .orlBuNmL2(emptyIfNull(l2))
+                .orlBuNmL3(emptyIfNull(l3))
+                .orlBuNmL4(emptyIfNull(l4))
+                .location(emptyIfNull(spec.location()))
                 .category(spec.category())
-                .calNetRiskRtng(derived.calNetRiskRtng())
-                .grcMetrics(derived.grcMetrics())
-                .commentary(derived.commentary())
-                .ctrlEffRtn(derived.ctrlEffRtn())
                 .status(STATUS_OPEN)
                 .createdBy(userId)
                 .createDtTm(now)
                 .build();
+    }
+
+    /** Empty dimension columns are persisted as '' (never null) to keep the unique index effective. */
+    private String emptyIfNull(String value) {
+        return value == null ? "" : value;
     }
 
     // ── Lookups ────────────────────────────────────────────────────────────────
@@ -324,33 +256,6 @@ public class LandscapeAssmtGenerationService {
         return map;
     }
 
-    /** Loads and indexes all four module fact tables for the given business date. */
-    private FactIndex loadFacts(LocalDate bizDt) {
-        Map<DimensionKey, IncFactOrl> inc = incFactRepository.findByBizDt(bizDt).stream()
-                .collect(Collectors.toMap(
-                        f -> new DimensionKey(f.getRiskArea(), f.getOrlBuNmL2(), f.getOrlBuNmL3(),
-                                f.getOrlBuNmL4(), f.getLocation(), f.getCategory()),
-                        Function.identity(), (a, b) -> a, LinkedHashMap::new));
-        Map<DimensionKey, InaFactOrl> ina = inaFactRepository.findByBizDt(bizDt).stream()
-                .collect(Collectors.toMap(
-                        f -> new DimensionKey(f.getRiskArea(), f.getOrlBuNmL2(), f.getOrlBuNmL3(),
-                                f.getOrlBuNmL4(), f.getLocation(), f.getCategory()),
-                        Function.identity(), (a, b) -> a, LinkedHashMap::new));
-        Map<DimensionKey, KriFactOrl> kri = kriFactRepository.findByBizDt(bizDt).stream()
-                .collect(Collectors.toMap(
-                        f -> new DimensionKey(f.getRiskArea(), f.getOrlBuNmL2(), f.getOrlBuNmL3(),
-                                f.getOrlBuNmL4(), f.getLocation(), f.getCategory()),
-                        Function.identity(), (a, b) -> a, LinkedHashMap::new));
-        Map<DimensionKey, RcsaFactOrl> rcsa = rcsaFactRepository.findByBizDt(bizDt).stream()
-                .collect(Collectors.toMap(
-                        f -> new DimensionKey(f.getRiskArea(), f.getOrlBuNmL2(), f.getOrlBuNmL3(),
-                                f.getOrlBuNmL4(), f.getLocation(), f.getCategory()),
-                        Function.identity(), (a, b) -> a, LinkedHashMap::new));
-        log.debug("Loaded facts for {}: inc={}, ina={}, kri={}, rcsa={}",
-                bizDt, inc.size(), ina.size(), kri.size(), rcsa.size());
-        return new FactIndex(inc, ina, kri, rcsa);
-    }
-
     // ── Parsing helpers ────────────────────────────────────────────────────────
 
     /** Parses the RISK_AREA JSON string and returns its keys in insertion order. */
@@ -362,7 +267,7 @@ public class LandscapeAssmtGenerationService {
             Map<String, Object> map = MAPPER.readValue(
                     json, new TypeReference<LinkedHashMap<String, Object>>() {});
             return new ArrayList<>(map.keySet());
-        } catch (Exception e) {
+        } catch (JsonProcessingException e) {
             log.warn("Failed to parse RISK_AREA JSON '{}': {}", json, e.getMessage());
             return Collections.emptyList();
         }
@@ -375,23 +280,11 @@ public class LandscapeAssmtGenerationService {
         return Arrays.stream(raw.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // ── Internal value types ─────────────────────────────────────────────────────
 
     /** One expanded CSV row before BU-hierarchy resolution. */
     private record RowSpec(String riskArea, String orlBu, String location, String category) {}
-
-    /** Fact rows indexed by dimension key, one map per module. */
-    private record FactIndex(Map<DimensionKey, IncFactOrl> inc,
-                             Map<DimensionKey, InaFactOrl> ina,
-                             Map<DimensionKey, KriFactOrl> kri,
-                             Map<DimensionKey, RcsaFactOrl> rcsa) {
-
-        /** The module fact rows matching the given key (each may be null). */
-        MatchedFactRows match(DimensionKey key) {
-            return new MatchedFactRows(inc.get(key), ina.get(key), kri.get(key), rcsa.get(key));
-        }
-    }
 }
